--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,13 @@
   <body>
     <div id="container">
       <div id="user_nav">
-	<%= link_to "Registro", "Login" new_user_path%>
+	<% if current_user %>
+	  <%= link_to "Editar perfil", edit_user_path(:current) %>
+	  <%= link_to "Logout", logout_path %>
+	<% else %>
+	  <%= link_to "Registro", new_user_path%>
+	  <%= link_to "Login", login_path %>
+	<% end %>
       </div>
       <% flash.each do |name, msg| %>
         <%= content_tag :div, msg, :id => "flash_#{name}" %>
