Grading projects, done!

--- a/app/views/projects/assignment.html.erb
+++ b/app/views/projects/assignment.html.erb
@@ -8,5 +8,7 @@
       <%= check_box_tag "assignment[]", a %><%= label_tag a %><br/>
     <% end %>
   <p/>
-  <%= submit_tag "Enviar" %>
+  <%= submit_tag "Asignar" %>
 <% end %>
+
+<p><%= link_to "Lista de RFPs", projects_path %></p>
