--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,8 @@
     <div id="container">
       <div id="user_nav">
 	<% if current_user %>
-	  <%= link_to "Editar perfil", edit_user_path(:current) %>
+	  <%= link_to "Evaluaciones Pendientes", pending_assignments_path %>
+	  <%= link_to "Editar perfil", edit_user_path(current_user) %>
 	  <%= link_to "Logout", logout_path %>
 	<% else %>
 	  <%= link_to "Registro", new_user_path%>
