--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,8 +1,8 @@
-<% title "Edit Project" %>
+<% title "Editar RFP" %>
 
 <%= render 'form' %>
 
 <p>
-  <%= link_to "Show", @project %> |
-  <%= link_to "View All", projects_path %>
+  <%= link_to "Mostrar", @project %> |
+  <%= link_to "Ver todos", projects_path %>
 </p>
