--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,5 +1,5 @@
-<% title "New Project" %>
+<% title "Nuevo RFP" %>
 
 <%= render 'form' %>
 
-<p><%= link_to "Back to List", projects_path %></p>
+<p><%= link_to "Lista de RFPs", projects_path %></p>
