--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,11 +20,13 @@
 	  <%= link_to "Login", login_path %>
 	<% end %>
       </div>
-      <% flash.each do |name, msg| %>
+      <div id="inside"> 
+	<% flash.each do |name, msg| %>
         <%= content_tag :div, msg, :id => "flash_#{name}" %>
-      <% end %>
-      <%= content_tag :h1, yield(:title) if show_title? %>
-      <%= yield %>
+	<% end %>
+	<%= content_tag :h1, yield(:title) if show_title? %>
+	<%= yield %>
+      </div>
     </div>
   </body>
 </html>
