add similars in projects view

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -24,6 +24,15 @@
   Todavía faltan usuarios por calificar este RFP<br/>
   <%= link_to "Ver usuarios", :action => :pending_users, :id => @project.id %>
 </p>
+<% else %>
+<p>
+  <strong> Similars Projects </strong>
+  <ul>
+    <% for p in @project.similars %>
+    <li> <%= link_to "*" + h(p.name) + "*", p %> </li>
+    <% end %>
+  </ul>
+</p>
 <% end %>
 <p>
   <%= link_to "Calificar", :action => 'grade', :id => @project.id %> |
