--- a/app/views/projects/pending_users.html.erb
+++ b/app/views/projects/pending_users.html.erb
@@ -1,4 +1,4 @@
 <% title "Usuarios pendientes" %>
 <% @users.each do |user| %>
-<%= link_to user.username, user %><br/>
+<%= user.username%><br/>
 <% end %>
